deploy/dev-terminate/patch-backend-http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend
spec:
  template:
    spec:
      containers:
        - name: nginx
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: demo-backend-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: demo-backend
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
