deploy/dev-terminate/patch-gateway-terminate.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress
spec:
  listeners:
    - name: tls
      tls:
        mode: Terminate
