deploy/dev-terminate/patch-tlsroute-backend-port.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: demo
spec:
  rules:
    - backendRefs:
        - name: demo-backend
          kind: Service
          port: 8080
